<resources>
    <string name="app_name">CBB App 🚌 </string>
    <string name="title_activity_bookings">Bookings</string>

    <string name="btnsignup">signup</string>


    <string-array name="from_array">
        <item>Colombo</item>
        <item>Moratuwa</item>
        <item>Wellawatta</item>
        <item>Colpitty</item>
    </string-array>


    <string-array name="to_array">
        <item>Kandy</item>
        <item>Jaffna</item>
        <item>Batticola</item>
        <item>Galle</item>
        <item>Matara</item>
    </string-array>


    <string-array name="qty_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="cat_array">
        <item>adult</item>
        <item>kids</item>
    </string-array>

    <string name="btn_Com">Proceed</string>
    <string name="txt_Sel">Choose Payment Method</string>
    <string name="btn_Cardpay">Pay with Card</string>
    <string name="box_PayCard">Pay with Card</string>
    <string name="tex_Name" />
    <string name="tex_Address" />
    <string name="tex_Num" />
    <string name="btn_Conf">Continue</string>
    <string name="btn_Showall">Show</string>
    <string name="btn_Update">Change</string>
    <string name="txt_UpdAdd">Change Address</string>
    <string name="tex_UpdNum">Change Number</string>
    <string name="tex_Delete">Do you want to delete it?</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Delete">Delete</string>
    <string name="btn_Hire">Hire Bus</string>
    <string name="tex_Date">Select a Date</string>
    <string name="btn_Calendar">Select</string>
    <string name="tex_HireTitle">Bus Details for Hire</string>
    <string name="tex_Time">Select a Time</string>
    <string name="btn_Clock">Select</string>
    <string name="tex_Clock">Select a Time</string>
    <string name="tex_Route">Required Destination</string>
    <string name="tex_Destin" />
    <string name="tex_HireWarn">The rate will be discussed by the manager shortly....</string>
    <string name="tex_Warn">❗❗❗Our manager will contact with you shortly to discuss the rate.....</string>
    <string name="tex_ReqDay">Required Days</string>
    <string name="tex_D">Enter Days</string>
    <string name="tex_DaysWant" />
    <string name="tex_People">Num. of people</string>
    <string name="tex_PeopleNum" />
    <string name="tex_peoNum">Enter Number</string>
    <string name="btn_HirePro">Hire</string>
    <string name="btn_ViewHire">View All Hires</string>
    <string name="tex_PayDetails">Enter Payment Details</string>
    <string name="tex_CardDetail">Enter Card Details</string>
    <string name="Card_h">**** **** **** ****</string>
    <string name="Card_hint">Enter Card Number</string>

</resources>