<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HireActivity">

    <TextView
        android:id="@+id/tex_Date"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tex_Date"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_HireTitle" />

    <TextView
        android:id="@+id/tex_Route"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tex_Route"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_Clock" />

    <TextView
        android:id="@+id/tex_ReqDay"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tex_ReqDay"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_Route" />

    <TextView
        android:id="@+id/tex_People"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/tex_People"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_ReqDay" />

    <TextView
        android:id="@+id/tex_Clock"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/tex_Clock"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_Date" />

    <Button
        android:id="@+id/btn_Calendar"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:backgroundTint="@color/btn_Calendar"
        android:text="@string/btn_Calendar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tex_Date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/tex_Date"
        app:layout_constraintTop_toTopOf="@+id/tex_Date"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/btn_Clock"
        android:layout_width="132dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/btn_Calendar"
        android:text="@string/btn_Clock"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toEndOf="@+id/tex_Clock"
        app:layout_constraintTop_toBottomOf="@+id/btn_Calendar" />

    <TextView
        android:id="@+id/tex_HireTitle"
        android:layout_width="259dp"
        android:layout_height="58dp"
        android:layout_marginTop="16dp"
        android:text="@string/tex_HireTitle"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tex_Destin"
        android:layout_width="134dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Enter Place"
        android:inputType="textPersonName"
        android:text="@string/tex_Destin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tex_Route"
        app:layout_constraintTop_toBottomOf="@+id/btn_Clock" />

    <TextView
        android:id="@+id/tex_HireWarn"
        android:layout_width="351dp"
        android:layout_height="71dp"
        android:layout_marginTop="48dp"
        android:text="@string/tex_Warn"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_People" />

    <EditText
        android:id="@+id/tex_DaysWant"
        android:layout_width="133dp"
        android:layout_height="42dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/tex_D"
        android:inputType="textPersonName"
        android:text="@string/tex_DaysWant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tex_ReqDay"
        app:layout_constraintTop_toBottomOf="@+id/tex_Destin" />

    <EditText
        android:id="@+id/tex_PeopleNum"
        android:layout_width="133dp"
        android:layout_height="39dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/tex_peoNum"
        android:inputType="textPersonName"
        android:text="@string/tex_PeopleNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tex_People"
        app:layout_constraintTop_toBottomOf="@+id/tex_DaysWant" />

    <Button
        android:id="@+id/btn_HirePro"
        android:layout_width="204dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/btn_HirePro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_HireWarn"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>