<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CardActivity">

    <EditText
        android:id="@+id/tex_Name"
        android:layout_width="193dp"
        android:layout_height="44dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tex_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tex_PayDetails" />

    <EditText
        android:id="@+id/tex_Address"
        android:layout_width="195dp"
        android:layout_height="44dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tex_Address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tex_Name" />

    <EditText
        android:id="@+id/tex_Num"
        android:layout_width="192dp"
        android:layout_height="43dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/tex_Num"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tex_Address" />

    <Button
        android:id="@+id/btn_Conf"
        android:layout_width="151dp"
        android:layout_height="41dp"
        android:text="Pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_ExpiryDate"
        app:layout_constraintVertical_bias="0.148" />

    <TextView
        android:id="@+id/tex_PayDetails"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:text="@string/tex_PayDetails"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="37dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:text="Name:"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_PayDetails" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="114dp"
        android:layout_height="38dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:text="Address:"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:text="Phone Number:"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tex_CardDetails"
        android:layout_width="222dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/tex_CardDetail"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/tex_CardNum"
        android:layout_width="349dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/Card_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_CardDetails" />

    <EditText
        android:id="@+id/tex_ExpiryDate"
        android:layout_width="156dp"
        android:layout_height="41dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="MM/YY"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_CardNum" />

    <EditText
        android:id="@+id/tex_CCV"
        android:layout_width="161dp"
        android:layout_height="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="CCV"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.974"
        app:layout_constraintStart_toEndOf="@+id/tex_ExpiryDate"
        app:layout_constraintTop_toBottomOf="@+id/tex_CardNum" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="319dp" />

    <View
        android:id="@+id/view"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tex_Num" />

</androidx.constraintlayout.widget.ConstraintLayout>